Miscellaneous fixes [MJ-232]
Generalized template tag
Removed confusing table styles
Turned the details table into a collection of divs and made it a formbox
Truncated the search url to prevent it from breaking layout
Added target=_blank to links

--- a/static/my.jobs.css
+++ b/static/my.jobs.css
@@ -5,22 +5,6 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     }
 
-.table-outline {
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-collapse: separate;
-    border-spacing: 0;
-}
-.table-outline td {
-    border-top: none;
-    border-bottom: none;
-}
-.table-outline th {
-    border-bottom: 1px solid #ddd;
-}
-
 #main {
     padding: 50px;
 }
@@ -225,7 +209,14 @@ form select{
     border: 2px solid #574E44;
     border-radius: 5px;
     }
-.formBox, .loginBox{    
+.loginBox{    
+    background-color: #574e44;
+    padding: 10px;
+    padding-bottom: 30px;
+    border: 2px solid #574E44;
+    border-radius: 5px;
+    }
+.formBox{    
     background-color: #f4f1ea;
     padding: 10px;
     padding-bottom: 30px;
@@ -240,7 +231,7 @@ form select{
     }
 .formBox + .formBox{
     margin-top: 20px;
-    }
+}
 .account-box{    
     background-color: #FFF;
     padding: 10px;
@@ -248,17 +239,17 @@ form select{
     border-radius: 5px;
     margin-top: 105px;   
     }
-.formBox, .account-box h3 {
+.loginBox, .formBox, .account-box h3 {
     color: #FFF;    
     }
-.formBox, .loginBox, .account-box h3 {
+.formBox, .account-box h3 {
     color: #000;    
     }
 .loginBox a{
-    color: #333;
+    color: #FFF;
     }
 .loginBox a:hover{
-    color: #333;
+    color: #FFF;
     }
 #account-page-2 .loginBox, #account-page-2 .profileBox{
     padding-left: 0px;
@@ -379,9 +370,7 @@ form select{
     font-size: 1.1em;
     color: #fff
     }
-    .btn.primary:hover{
-    color: #FFF;
-    }
+
 .alert-message ul{
     list-style: none;
     padding: 0;
@@ -830,6 +819,9 @@ form input[type='checkbox']{
     ul.ui-autocomplete{
         display: none !important;
     }
+
+    /* Mobile Saved Search */
+
     #saved-search-form label[for=id_is_active],
     #saved-search-form label[for=id_edit_is_active] {
         margin-top:10px;
@@ -875,6 +867,13 @@ form input[type='checkbox']{
     #id_label {
         margin-top: 0px !important;
     }
+
+    /* Mobile Saved Search Listing */
+
+    #saved-search-listing-details {
+        margin-bottom: 15px;
+    }
+
     .section.subpage {
         background-color: #fff;
     }
@@ -1099,6 +1098,8 @@ table td, table th{
     margin-top: 5px;
 }
 
+/* Saved Search Listing */
+
 #saved-search-listing-table a {
     text-decoration: none;
 }
@@ -1108,10 +1109,24 @@ table td, table th{
     margin: 0px;
 }
 
-[id^="saved-search-listing"] p {
+#saved-search-listing-table p {
     display: inline;
     font-size: 1.7em;
     font-weight: bold;
+}
+
+#saved-search-listing-details > div,
+#saved-search-listing-details > h2 {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+#saved-search-listing-details > div {
+    padding-top: 10px;
+}
+
+#saved-search-listing-details {
+    padding-bottom: 0px;
 }
 
 [class^="icon-"], [class*=" icon-"] {
